# LLM-Attack-Engine

./: CMakeLists.txt  README.md  main.cpp
adaptive_attack/: adaptive_attack_manager.cpp  adaptive_attack_manager.h
analytics/: analytics_manager.cpp  analytics_manager.h
api/: api.cpp  api.h
attack/: attack_engine.cpp  attack_engine.h  brute_force_attack.cpp  brute_force_attack.h  combination_attack.cpp  combination_attack.h  credential_stuffing_attack.cpp  credential_stuffing_attack.h  dictionary_attack.cpp  dictionary_attack.h  fingerprint_attack.cpp  fingerprint_attack.h  hybrid_attack.cpp  hybrid_attack.h  markov_attack.cpp  markov_attack.h  mask_attack.cpp  mask_attack.h  pass_the_hash_attack.cpp  pass_the_hash_attack.h  pattern_based_attack.cpp  pattern_based_attack.h  permuted_dictionary_attack.cpp  permuted_dictionary_attack.h  phishing_attack.cpp  phishing_attack.h  rainbow_table_attack.cpp  rainbow_table_attack.h  reverse_attack.cpp  reverse_attack.h  rule_based_attack.cpp  rule_based_attack.h  social_engineering_attack.cpp  social_engineering_attack.h  statistical_attack.cpp  statistical_attack.h  target_factory.cpp  target_factory.h  target_interface.h  timing_attack.cpp  (+1 more)
auth/: auth.cpp  auth.h
cli/: cli.cpp  cli.h
cloud/: cloud_integration.cpp  cloud_integration.h
config/: config.cpp  config.h  config.json
database/: db_manager.cpp  db_manager.h
database/data/: mask.txt
database/data/rules/: base_rules.txt  brute_force_rules.txt  combination_rules.txt  credential_stuffing_rules.txt  custom_rules.txt  dictionary_rules.txt  fingerprint_rules.txt  hybrid_rules.txt  markov_rules.txt  mask_rules.txt  pass_the_hash_rules.txt  pattern_based_rules.txt  permuted_dictionary_rules.txt  phishing_rules.txt  rainbow_table_rules.txt  reverse_rules.txt  rule_based_rules.txt  social_engineering_rules.txt  statistical_rules.txt  timing_rules.txt
dictionary/: dictionary_loader.cpp  dictionary_loader.h
gpu/: gpu_manager.cpp  gpu_manager.h
logging/: logger.cpp  logger.h
machine_learning/: ml_model_trainer.cpp  ml_model_trainer.h  ml_predictor.cpp  ml_predictor.h
monitoring/: monitor.cpp  monitor.h
notifications/: notification_manager.cpp  notification_manager.h
policy/: policy_manager.cpp  policy_manager.h
recovery/: auto_recovery.cpp  auto_recovery.h
rules/: rule_engine.cpp  rule_engine.h
scheduling/: scheduler.cpp  scheduler.h
social_engineering/: personalized_dictionary_generator.cpp  personalized_dictionary_generator.h  social_data_collector.cpp  social_data_collector.h
targets/: bitcoin_core.cpp  bitcoin_core.h  bitlocker.cpp  bitlocker.h  blockchain.cpp  blockchain.h  electrum.cpp  electrum.h  exodus.cpp  exodus.h  metamask.cpp  metamask.h  phantom_wallet.cpp  phantom_wallet.h  ronin_wallet.cpp  ronin_wallet.h  veracrypt.cpp  veracrypt.h
users/: user_management.cpp  user_management.h
utils/: cloud_utils.cpp  cloud_utils.h  data_utils.cpp  data_utils.h  gpu_utils.cpp  gpu_utils.h  notification_utils.cpp  notification_utils.h  threading_utils.cpp  threading_utils.h
web/: app.cpp  app.h
web/static/css/: style.css
web/static/js/: main.js
web/templates/: attack.html  base.html  index.html  login.html  logs.html  reports.html  schedule.html  user_management.html
